samples/_failures_safe/1761413809_65d80f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0554897.c: In function ‘main’:
./samples/SAFE/__tmp_e0554897.c:160:9: error: expected declaration or statement at end of input
  160 |         }
      |         ^
./samples/SAFE/__tmp_e0554897.c:160:9: error: expected declaration or statement at end of input
